user-management-system/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-frontend
  labels:
    app: ums-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ums-frontend

  template:
    metadata:
      labels:
        app: ums-frontend

    spec:
      containers:
        - name: ums-frontend
          image: rajan06166/ums-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
