user-management-system/k8s/usermanagementsystem-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: usermanagementsystem

  labels:
    app: usermanagementsystem

spec:
  replicas: 1

  selector:
    matchLabels:
      app: usermanagementsystem

  template:
    metadata:
      labels:
        app: usermanagementsystem

    spec:
      containers:
        - name: usermanagementsystem

          image: rajan06166/usermanagementsystem:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
