user-management-system/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-frontend-service

spec:
  selector:
    app: ums-frontend

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
