user-management-system/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: usermanagementsystem-service
spec:
  selector:
    app: usermanagementsystem
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
