user-management-system/k8s/usermanagementsystem-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: usermanagementsystem-service

spec:
  selector:
    app: usermanagementsystem

  ports:
    - port: 8080
      targetPort: 8080

  type: NodePort
