user-management-system/k8s/ums-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ums-ingress
spec:
  ingressClassName: nginx

  rules:
    - host: 192.168.49.2
    - http:
        paths:

          # Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: usermanagementsystem-service
                port:
                  number: 8080

          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ums-frontend-service
                port:
                  number: 80
